<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@+id/HomeActivity">

    <activity
        android:id="@+id/HomeActivity"
        android:name="com.example.armcokenyalimited.MainActivity"
        android:label="@string/home"
        tools:layout="@layout/activity_main"/>

    <activity
            android:id="@+id/ProfileActivity"
            android:name="com.example.armcokenyalimited.PROFILE.Profile"
            android:label="@string/profile"
            tools:layout="@layout/activity_profile"/>

    <activity
            android:id="@+id/CartActivity"
            android:name="com.example.armcokenyalimited.CART.Cart"
            android:label="@string/cart"
            tools:layout="@layout/activity_cart"/>

    <activity
            android:id="@+id/FavouriteActivity"
            android:name="com.example.armcokenyalimited.FAVOURITES.Favourites"
            android:label="@string/favourites"
            tools:layout="@layout/activity_wish_list"/>




</navigation>