<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

<ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="1dp"
        tools:layout_editor_absoluteX="1dp"
        android:fillViewport="true"
        app:layout_scrollFlags="enterAlways"
        >

<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        app:layout_scrollFlags="enterAlways">


        <Button
                android:text="@string/blenders"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonBlenders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewKitchenAppliances"
                app:layout_constraintEnd_toEndOf="@+id/buttonHomeTheatres"
                app:layout_constraintHorizontal_bias="0.0"
                app:cornerRadius="5dp"
                android:layout_marginTop="8dp"
                />
        <Button
                android:text="@string/food_processors"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonFoodProcessors"
                app:layout_constraintTop_toBottomOf="@+id/imageViewKitchenAppliances"
                app:layout_constraintEnd_toEndOf="parent"
                app:cornerRadius="5dp"
                app:layout_constraintStart_toStartOf="@+id/buttonDvds" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" />
        <Button
                android:text="@string/dvds"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonDvds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonTvWallBrackets"
                app:layout_constraintHorizontal_bias="0.0"
                app:cornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonTvWallBrackets" android:layout_marginTop="4dp"
                />
        <Button
                android:text="@string/home_theatres"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonHomeTheatres"
                app:layout_constraintTop_toBottomOf="@+id/buttonTelevisionSets"
                app:layout_constraintEnd_toEndOf="@+id/buttonTelevisionSets"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"
                app:layout_constraintHorizontal_bias="0.0" />
        <TextView
                android:text="@string/home_entertainment"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textViewhomeEntertainment"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="serif-monospace"
                android:textSize="34sp" android:textAlignment="center"
                android:textColor="#FF00A1"
                android:textStyle="bold"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="258dp" app:srcCompat="@drawable/home_entertainment_2_1_"
                android:id="@+id/imageViewHomeEntertainment"
                app:layout_constraintTop_toBottomOf="@+id/textViewhomeEntertainment"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/image_of_a_hometheatre_system_in_a_living_room"/>
        <Button
                android:text="@string/television_sets"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonTelevisionSets"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHomeEntertainment"
                app:layout_constraintEnd_toStartOf="@+id/buttonTvWallBrackets"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
               />
        <Button
                android:text="@string/tv_wall_brackets"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonTvWallBrackets"
                app:layout_constraintTop_toBottomOf="@+id/imageViewHomeEntertainment" android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/buttonTelevisionSets" android:layout_marginTop="8dp"
                app:cornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent" />
        <TextView
                android:text="@string/kitchen_appliances"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textViewKitchenAppliances"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="serif-monospace" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="34sp" android:textStyle="bold" android:textAlignment="center"
                android:textColor="#FF00A1" app:layout_constraintTop_toBottomOf="@+id/imageViewHomeEntertainment"
                android:layout_marginTop="116dp" app:layout_constraintHorizontal_bias="1.0"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="210dp" app:srcCompat="@drawable/kitchenappliances_banner_2"
                android:id="@+id/imageViewKitchenAppliances"
                app:layout_constraintTop_toBottomOf="@+id/textViewKitchenAppliances" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                android:contentDescription="@string/image_of_kitchen_appliances"/>
        <Button
                android:text="@string/portable_cookers"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonPortableCookers"
                app:layout_constraintTop_toBottomOf="@+id/buttonBlenders"
                android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonBlenders"
                app:layout_constraintHorizontal_bias="0.0" />
        <Button
                android:text="@string/rice_cookers"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonRiceCookers"
                app:layout_constraintTop_toBottomOf="@+id/buttonFoodProcessors"
                android:layout_marginTop="4dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonFoodProcessors"
                app:layout_constraintHorizontal_bias="1.0"
                app:cornerRadius="5dp"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/large_appliances"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/textViewLargeAppliances"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="@+id/buttonRiceCookers"
                app:layout_constraintTop_toBottomOf="@+id/imageViewKitchenAppliances"
                app:layout_constraintHorizontal_bias="0.495"
                android:layout_marginTop="118dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:fontFamily="serif-monospace" android:textSize="34sp" android:textStyle="bold"
                android:textAlignment="center" android:textColor="#FF00A1"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="233dp"
                app:srcCompat="@drawable/above_the_fold_image_built_in_refrigerators___kitchenaid_kbfn502ebs_built_in_french_door_lifestyle_image"
                android:id="@+id/imageViewLargeAppliances"
                app:layout_constraintTop_toBottomOf="@+id/textViewLargeAppliances" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/image_of_large_appliances_example_fridge_free_standing_cooker"/>
        <Button
                android:text="@string/refrigerators"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonRefrigerators"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLargeAppliances"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonPortableCookers" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:cornerRadius="5dp"
               />
        <Button
                android:text="@string/air_conditioners"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonAirConditioners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonPortableCookers"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonRefrigerators" android:textSize="14sp"/>
        <Button
                android:text="@string/free_standing_cookers"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonFreeStandingCookers"
                android:layout_marginTop="8dp"
                app:cornerRadius="5dp"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLargeAppliances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonRiceCookers" />
        <Button
                android:text="@string/water_dispensers"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonWaterDispensers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonRiceCookers"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/buttonFreeStandingCookers"
                android:layout_marginTop="4dp"
                app:cornerRadius="5dp"
                />
        <TextView
                android:text="@string/small_appliances"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textViewSmallAppliances"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLargeAppliances"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="118dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="serif-monospace"
                android:textSize="34sp" android:textStyle="bold" android:textAlignment="center"
                android:textColor="#FF00A1"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="296dp"
                app:srcCompat="@drawable/gm_5a600f64_eac9_4216_9981_0aee2be4f548_steam_iron_7_used_how_to_buy_the_best_steam_iron"
                android:id="@+id/imageViewSmallAppliances"
                app:layout_constraintTop_toBottomOf="@+id/textViewSmallAppliances" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:contentDescription="@string/image_of_an_iron_example_of_a_small_appliance"/>
        <Button
                android:text="@string/cooling_fans"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonCoolingFans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonPortableCookers"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/imageViewSmallAppliances"
                android:layout_marginTop="8dp"
                app:cornerRadius="5dp"
           />
        <Button
                android:text="@string/irons"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonIrons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonPortableCookers"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/buttonCoolingFans"
                app:cornerRadius="5dp"
                android:layout_marginTop="4dp"
             />
        <Button
                android:text="@string/microwaves"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonMicrowaves"
                app:layout_constraintTop_toBottomOf="@+id/imageViewSmallAppliances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonWaterDispensers" android:layout_marginTop="8dp"
               />
        <Button
                android:text="@string/kettles"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/buttonKettles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonWaterDispensers"
                app:layout_constraintTop_toBottomOf="@+id/buttonMicrowaves"
                app:cornerRadius="5dp"
                android:layout_marginTop="4dp"
                />
        <TextView
                android:text="@string/contact_armco_kenya_service_centre_on_25471234567"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textViewContacts"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" android:textStyle="bold|italic" android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/imageViewSmallAppliances"
                android:layout_marginTop="130dp" android:textColor="#098AF1"/>
        <TextView
                android:text="@string/visit_our_website_on_www_armcokenya_co_ke"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textViewWebsiteLink"
                app:layout_constraintTop_toTopOf="@+id/textViewContacts" android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:fontFamily="cursive"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="20sp"
                android:textStyle="bold|italic" android:textAlignment="center" android:textColor="#FB0055"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

        <com.google.android.material.navigation.NavigationView
                android:id="@+id/nav_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:headerLayout="@layout/nav_header"
                app:menu="@menu/activity_main_drawer_items"
                android:fitsSystemWindows="true"
        >

        </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>


