<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashScreen" android:background="#FFFFFF" android:id="@+id/ConstraintLayout"
        android:backgroundTint="#FFFFFF">

    <TextView
            android:text="@string/project_videlishious_creations"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textViewAppCreator"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/app_creator_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic" android:textSize="16sp" android:textAlignment="center"
            android:textColor="#000000"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ezgif_7_ae47be235b79_auto_x2"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textViewAppCreator" android:layout_marginTop="50dp"
            app:layout_constraintVertical_bias="0.31" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/new_app_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>